# nvchunk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
design/: class. plantuml
src/: CMakeLists.txt
src/nvchunk/: CMakeLists.txt  cpmem.hpp  cpmem.hpp.in  nvchunk.cpp  nvchunk.hpp
src/public/: CMakeLists.txt  config.h.in  config.hpp  cpmem.hpp  public.hpp  singleton.hpp
src/tests/: CMakeLists.txt  nvchunk_test.cpp
